--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script>
         /* [Step 01] 시작 버튼 누르면 test.html 페이지로 이동 */
-    function start() {
-        window.location="test.html";
-    }
+        function start() {
+            location.href = 'test.html';
+        }
     </script>
 </body>
 </html>
