--- a/test_hard.html
+++ b/test_hard.html
@@ -35,6 +35,14 @@
             문제 번호는 0번으로 초기화, 문제와 답변 JSON으로 구성하기 
         */
 
+        let no = 0;
+        let mbtiScore = [
+            { id: "EI", score: 0 },
+            { id: "SN", score: 0 },
+            { id: "TF", score: 0 },
+            { id: "JP", score: 0 },
+        ]; 
+
         const questionList = [
             {
                 "title": "회사에 출근한 첫날, 기분이 어떤가?", 
@@ -108,7 +116,7 @@
                 "A": "우선, 저축할 돈부터 미리 빼두고 생활비 안에서 사고 싶은 것을 산다",
                 "B": "수고한 나에게 박수를! 나를 위한 금융치료에 나선다"
             }
-        ];
+        ]
 
         /* 
             [Step 02] 다음 문제로 이동
@@ -117,13 +125,22 @@
                 ㄴ 아니면 다음 문제를 출력
         */
         function next() {
+            no++;
             
             /* 
                 [Step 03] no 값이 마지막 질문을 넘어갔을 때
                  ㄴ MBTI를 계산하고 결과 페이지(result.html)로 이동
                  ㄴ 이동할 때 MBTI 결과를 파라미터로 전달
             */
-
+            if(no > questionList.length - 1) {
+                var mbti = mbtiScore.reduce((acc, curr) =>
+                    acc + (curr.score >= 2 ? curr.id.substring(0, 1): curr.id.substring(1, 2)), ""
+                )
+                console.log('mbti', mbti);
+                location.href = 'result.html?mbti=' + mbti;
+            } else {
+                render();
+            }
         }
 
         /* 
@@ -131,7 +148,10 @@
              ㄴ 문제와 답변은 문제 데이터(questionList)에 있는 데이터 이용
         */
         function render() {
-
+            $("#no").html(parseInt(no + 1));
+            $("#title").html(questionList[no].title);
+            $("#A").html(questionList[no].A);
+            $("#B").html(questionList[no].B);
         }
 
         /* 
@@ -139,7 +159,10 @@
              ㄴ (A 버튼을 클릭한 경우) EI, SN, TF, JP에 해당하는 값을 1증가,
         */
         const addScore = () => {
-
+            const _type = questionList[no]["type"];
+            mbtiScore = mbtiScore.map((s) => 
+                s.id === _type? {id: s.id, score: s.score + 1} : s
+            );
         }
 
         /* 
@@ -149,8 +172,15 @@
              ㄴ B 버튼을 클릭하면 다음 문제로 이동
         */
         $(document).ready(function() {
-
+            render();
+            $("#A").on("click", () => {
+                addScore()
+                next();
+            });
+            $("#B").on("click", () => {
+                next();
+            });
         });
-  </script>
+    </script>
 </body>
 </html>
