--- a/test_middle.html
+++ b/test_middle.html
@@ -23,13 +23,16 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
     <script>
         /* 
             HTML 코드는 수정 금지
             아래에만 코드를 추가해 로직 구현하기
         */
 
-
+        
         /* 
             [Step 01] 초기화
             문제 번호는 0번으로 초기화, 문제와 답변 JSON으로 구성하기 
@@ -133,9 +136,15 @@
                  ㄴ 이동할 때 MBTI 결과를 파라미터로 전달
             */
             if(no > questionList.length - 1) {
-                var mbti = mbtiScore.reduce((acc, curr) =>
-                    acc + (curr.score >= 2 ? curr.id.substring(0, 1): curr.id.substring(1, 2)), ""
-                )
+                var mbti = "";
+                for (var i = 0; i < mbtiScore.length; i++) {
+                    var curr = mbtiScore[i];
+                    if (curr.score >= 2) {
+                        mbti += curr.id.substring(0, 1);
+                    } else {
+                        mbti += curr.id.substring(1, 2);
+                    }
+                }
                 console.log('mbti', mbti);
                 location.href = 'result.html?mbti=' + mbti;
             } else {
@@ -160,9 +169,13 @@
         */
         const addScore = () => {
             const _type = questionList[no]["type"];
-            mbtiScore = mbtiScore.map((s) => 
-                s.id === _type? {id: s.id, score: s.score + 1} : s
-            );
+
+            for (var i = 0; i < mbtiScore.length; i++) {
+                if (mbtiScore[i].id === _type) {
+                    mbtiScore[i].score++;
+                    break;
+                }
+            }
         }
 
         /* 
